@@ -41,27 +41,32 @@ function build_user_object($details)
 	return $user;
 }
 
-function add_user_to_database($details, $return_user = true)
+function add_user_to_database($details)
 {
 	//Some tests want a simple yes or no return value. If we return a user to these tests, then they print out too much information when failing.
 	//return_user is used for that purpose
 	$user = build_user_object($details);
 	$user->save();
-	if ($return_user == true)
-	{
-		return $user;
-	}
-	return $user == true;
+	return $user;
 }
 
-function try_user_login($username, $password)
+function lookup_user($username)
 {
 	$found_user = User::model()->findAllByAttributes(array('username'=> $username));
 	if (count($found_user) != 1)
 	{
 		return false;
 	}
-	$user = $found_user[0];
+	return $found_user[0];
+}
+
+function try_user_login($username, $password)
+{
+	$user = lookup_user($username);
+	if ($user == false)
+	{
+		return false;
+	}
 	$result = $user->authenticate($password);
 	if ($result == false)
 	{
